Fixing hidden measurements table header on IE11

--- a/LesionTracker/client/components/viewerSection/viewerSection.styl
+++ b/LesionTracker/client/components/viewerSection/viewerSection.styl
@@ -16,7 +16,8 @@
 
     .sidebar-option
       height: 100%
-      position: fixed
+      max-width: inherit
+      position: absolute
       transform(translateX(100%))
       transition($sidebarTransition)
       width: 100%
