--- a/Packages/ohif-measurements/client/components/measurementTable/measurementTableView/measurementTableView.styl
+++ b/Packages/ohif-measurements/client/components/measurementTable/measurementTableView/measurementTableView.styl
@@ -1,15 +1,13 @@
 @import "{ohif:design}/app"
 
 .measurementTableView.scrollArea
-  width: 100%
-  height: 100%
+  height: calc(100% - 105px)
   overflow-x: hidden
   overflow-y: auto
-  margin-left: -6px
-  margin-right: -16px
-  padding-bottom: 116px
-  padding-left: 6px
+  margin-right: -36px
+  padding-right: 36px
   -webkit-overflow-scrolling: touch
+  -ms-overflow-style: none
 
   &::-webkit-scrollbar
     display: none
