--- a/Packages/ohif-viewerbase/client/components/viewer/studyTimepointBrowser/studyTimepointBrowser.styl
+++ b/Packages/ohif-viewerbase/client/components/viewer/studyTimepointBrowser/studyTimepointBrowser.styl
@@ -83,6 +83,7 @@ $timepointButtonHeight = 55px
     margin-right: -36px
     padding-bottom: 20px
     padding-right: 36px
+    -ms-overflow-style: none
 
     &::-webkit-scrollbar
       display: none
